--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,22 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .vite/
+
+# --- Rules moved from frontend ---
+
+# Production build for Server Side Rendering
+dist-ssr
+
+# Local env overrides
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
